Added logging for canary to find out audit problems.